--- a/template/signup.html
+++ b/template/signup.html
@@ -28,18 +28,19 @@
                         <h2 class="fw-bold mb-2 text-uppercase">Signup Here</h2>
           
                         <div class="form-outline form-white mb-4">
-                          <input type="text" class="form-control form-control-lg" name='username' />
                           <label class="form-label" >Username</label>
+                          <input type="text" class="form-control form-control-lg" id='username' name='username'  />
+                          <span id='message'></span>
                         </div>
           
                         <div class="form-outline form-white mb-4">
-                          <input type="password" id="typePasswordX" class="form-control form-control-lg" name='password1' />
                           <label class="form-label" for="typePasswordX">Password</label> 
+                          <input type="password" id="typePasswordX" class="form-control form-control-lg" name='password1' />
                         </div>
 
                         <div class="form-outline form-white mb-4">
-                          <input type="password" id="typePasswordX" class="form-control form-control-lg" name='password2' />
                           <label class="form-label" for="typePasswordX">Conform Password</label> 
+                          <input type="password" id="typePasswordX" class="form-control form-control-lg" name='password2' />
                         </div>
           
           
@@ -69,6 +70,37 @@
             </div>
 
           </section>
+
+          <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+          <script>
+            $(document).ready( () => {
+              $('#username').keyup( () => {
+                var username = $('#username').val()
+                var data = {
+                  'csrfmiddlewaretoken' : '{{csrf_token}}',
+                  'username' : username
+                }
+
+                $.ajax({
+                  url : 'check',
+                  method: 'POST',
+                  data : data,
+                  dataType : 'json',
+                  success : (responce) =>{
+                    if (responce.message != ' '){
+                      $("#message").html(responce.message)
+                    }
+
+                    else{
+                      $("#message").html('Username Available')
+                    }  
+                    
+                  }
+                })
+
+              })
+            })
+          </script>
 
     </body>
 </html>
