--- a/template/table.html
+++ b/template/table.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-             <h2 class="fw-bold mb-2 text-uppercase">Blood Bank Table</h2> <br>
+             <h2 class="fw-bold mb-2 text-uppercase">Donor's Table</h2> <br>
             <p class="mb-0"> User : {{ username }}  <a class="btn btn-primary" href={% url 'logout' %} role="button">Logout</a></p>  
             
              <br>
@@ -36,15 +36,8 @@
       <td>{{ element.phone_number }}</td>
       <td>{{ element.blood_group }}</td>
       <td>
-         <form action="delete_member/{{element.id}}" method="POST">
-
-          <button class="btn btn-primary" id='{{element.id}}'> 
-
+         <a class="btn btn-primary" href='update_member/{{element.id}}' id='{{element.id}}'>Edit</a> &nbsp;
          <a class="btn btn-primary" href='delete_member/{{element.id}}' >Delete</a>
-          
-         </button>
-        
-         </form>
       </td>
     </tr>
 
