--- a/template/update.html
+++ b/template/update.html
@@ -18,25 +18,25 @@
           
                       <div class="mb-md-5 mt-md-4 pb-5">
 
-                    <form action="add_member", method="POST">
+                    <form action="", method="POST">
                         {% csrf_token %}
           
-                        <h2 class="fw-bold mb-2 text-uppercase">Add Member</h2>
+                        <h2 class="fw-bold mb-2 text-uppercase">Update {{name}} 's details</h2>
                         <p class="text-white-50 mb-5"> Please add details carefuly </p>
           
                         <div class="form-outline form-white mb-4">
                           <label class="form-label" for="typeEmailX">Name</label>
-                          <input type="text"  class="form-control form-control-lg" name='name' />
+                          <input type="text"  class="form-control form-control-lg" name='name'  value={{name}} />
                         </div>
 
                         <div class="form-outline form-white mb-4">
                           <label class="form-label" for="typeEmailX">Age</label>
-                          <input type="number"  class="form-control form-control-lg" name='age' />
+                          <input type="number"  class="form-control form-control-lg" name='age' value={{age}} />
                         </div>
 
                         <div class="form-outline form-white mb-4">
                           <label class="form-label" for="typeEmailX">Phone Number</label>
-                          <input type="text"  class="form-control form-control-lg" name='phonenumber' />
+                          <input type="text"  class="form-control form-control-lg" name='phonenumber' value={{phone_number}} />
                         </div>
 
                         <div class="form-outline form-white mb-4">
@@ -56,7 +56,7 @@
           
           <br>
           
-                        <button class="btn btn-outline-light btn-lg px-5" type="submit">ADD</button>
+                        <button class="btn btn-outline-light btn-lg px-5" type="submit">UPDATE</button>
           
                     </form>
 
